crates/app-typewars/tests/snapshots/snapshot__battle_loading.snap
---
source: crates/app-typewars/tests/snapshot.rs
expression: s
---
← [Esc] exit  Arkanis Prime · T1    WPM: 0   ACC: 100%   DMG: 0                                                         
                                                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ Arkanis Prime · enemy HP 3000/5000 ──────────────────────────────────────────────────────────────────────────────────┐
│███████████████████████████████████████████████████████████████████████                                               │
│███████████████████████████████████████████████████████████████████████                                               │
│█████████████████████████████████████████████████████████60% ██████████                                               │
│███████████████████████████████████████████████████████████████████████                                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│engaging Arkanis Prime…                                                                                               │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──────────┐┌ type a word · Enter or Space to submit ──────────────────────────────────────────────────┐┌──────────────┐
│streak    ││› type…                                                                                   ││mult          │
└──────────┘└──────────────────────────────────────────────────────────────────────────────────────────┘└──────────────┘
  SRG · overdrive · Hitting 3× mult enters Overdrive — cap raises to 5×.
