crates/app-typewars/tests/snapshots/snapshot__battle_with_words.snap
---
source: crates/app-typewars/tests/snapshot.rs
expression: s
---
← [Esc] exit  Arkanis Prime · T1    WPM: 0   ACC: 91%   DMG: 480                                                        
                                                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ Arkanis Prime · enemy HP 3000/5000 ──────────────────────────────────────────────────────────────────────────────────┐
│███████████████████████████████████████████████████████████████████████                                               │
│███████████████████████████████████████████████████████████████████████                                               │
│█████████████████████████████████████████████████████████60% ██████████                                               │
│███████████████████████████████████████████████████████████████████████                                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ d2 · 40dmg ──────────────────────────┐┌ d1 · 20dmg ──────────────────────────┐┌ d1 · 20dmg ──────────────────────────┐
│assault                               ││nexus                                 ││breach                                │
│──────────────────────────────────────││──────────────────────────────────────││──────────────────────────────────────│
│                                      ││                                      ││                                      │
│                                      ││                                      ││                                      │
│                                      ││                                      ││                                      │
│                                      ││                                      ││                                      │
│                                      ││                                      ││                                      │
│                                      ││                                      ││                                      │
│                                      ││                                      ││                                      │
│                                      ││                                      ││                                      │
│                                      ││                                      ││                                      │
│                                      ││                                      ││                                      │
│                                      ││                                      ││                                      │
│                                      ││                                      ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘└──────────────────────────────────────┘
┌──────────┐┌ type a word · Enter or Space to submit ──────────────────────────────────────────────────┐┌──────────────┐
│streak    ││› type…                                                                                   ││mult          │
└──────────┘└──────────────────────────────────────────────────────────────────────────────────────────┘└──────────────┘
  ASH · streak bonus · 10-hit streaks trigger an ash nova. Break your streak and lose it all.
