crates/app-typewars/tests/snapshots/snapshot__leaderboard.snap
---
source: crates/app-typewars/tests/snapshot.rs
expression: s
---
typewars · leaderboard    you: rank #2    [q] back to map                                                               
                                                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ legion standings · by total damage ──────────────────────────────────────────────────────────────────────────────────┐
│1 COD The Codex     ████████████████████  10000  1 regions                                                            │
│2 ASH Ashborn       ██████████░░░░░░░░░░  5000  0 regions                                                             │
│3 WAR Wardens       █████░░░░░░░░░░░░░░░  2500  0 regions                                                             │
│4 SRG Surge         ███░░░░░░░░░░░░░░░░░  1500  0 regions                                                             │
│5 SOL Solari        ██░░░░░░░░░░░░░░░░░░  1000  1 regions                                                             │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ player roster · top 3 · j/k navigate · Enter view profile ───────────────────────────────────────────────────────────┐
│ 1  alpha               ASH     WPM   87  DMG       5678                                                              │
│ 2  beta                COD     WPM   87  DMG       5678 [you]                                                        │
│ 3  gamma               WAR     WPM   87  DMG       5678                                                              │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
