crates/app-typewars/tests/snapshots/snapshot__legion_select_cursor_wardens.snap
---
source: crates/app-typewars/tests/snapshot.rs
expression: s
---
typewars · enlistment                                                                                                   
                                                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
CHOOSE YOUR LEGION                                                                                                      
                                                                                                                        
┌ 01 · ASH ────────────┐┌ 02 · COD ────────────┐┌ 03 · WAR ────────────┐┌ 04 · SRG ────────────┐┌ 05 · SOL ────────────┐
│Ashborn               ││The Codex             ││Wardens               ││Surge                 ││Solari                │
│                      ││                      ││                      ││                      ││                      │
│streak bonus          ││accuracy multiplier   ││regen suppression     ││overdrive             ││difficulty insight    │
│                      ││                      ││                      ││                      ││                      │
│10-hit streaks trigger││Perfect accuracy      ││Your damage suppresses││Hitting 3× mult enters││Word difficulty is    │
│an ash nova. Break    ││pushes your multiplier││region regen at a     ││Overdrive — cap raises││always visible to you.│
│your streak and lose  ││beyond the normal cap.││higher rate.          ││to 5×.                ││                      │
│it all.               ││                      ││                      ││                      ││← / → to select       │
│                      ││← / → to select       ││[ selected ]          ││← / → to select       ││                      │
│← / → to select       ││                      ││                      ││                      ││                      │
│                      ││                      ││                      ││                      ││                      │
│                      ││                      ││                      ││                      ││                      │
│                      ││                      ││                      ││                      ││                      │
│                      ││                      ││                      ││                      ││                      │
│                      ││                      ││                      ││                      ││                      │
│                      ││                      ││                      ││                      ││                      │
│                      ││                      ││                      ││                      ││                      │
└──────────────────────┘└──────────────────────┘└──────────────────────┘└──────────────────────┘└──────────────────────┘
┌ callsign (0/24) ─────────────────────────────────────────────────────────────────────────────────────────────────────┐
│enter your callsign                                                                                                   │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
Enlist → (choose a legion and enter callsign)                                                                           
                                                                                                                        
Legion allegiance is permanent for the season. Choose carefully.
