crates/app-typewars/tests/snapshots/snapshot__legion_swap_modal.snap
---
source: crates/app-typewars/tests/snapshot.rs
expression: s
---
typewars · war map  |  liberated: 2/25  contested: 2  pristine: 1                                                       
                                                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ all region┌ switch legion  [Esc] cancel ─────────────────────────────────────────────────────────────────┐───────────┐
│ 1     Arka│You can switch legions at any time. Damage history stays with you.                            │           │
│ 2   Zethar│                                                                                              │           │
│ 3     Iron│┌ ASH ────────────┐┌ COD ────────────┐┌ ✓ WAR ─────────┐┌ SRG ────────────┐┌ SOL ────────────┐│           │
│ 4   The Ho││Ashborn          ││The Codex        ││Wardens         ││Surge            ││Solari           ││░          │
│ 5     Sola││                 ││                 ││                ││                 ││                 ││           │
│           ││streak bonus     ││accuracy         ││regen           ││overdrive        ││difficulty       ││           │
│           ││                 ││multiplier       ││suppression     ││                 ││insight          ││           │
│           ││                 ││                 ││[ current ]     ││                 ││                 ││           │
│           ││                 ││                 ││                ││                 ││                 ││           │
│           ││                 ││                 ││                ││                 ││                 ││           │
│           ││                 ││                 ││                ││                 ││                 ││           │
│           ││                 ││                 ││                ││                 ││                 ││           │
│           ││                 ││                 ││                ││                 ││                 ││           │
│           ││                 ││                 ││                ││                 ││                 ││           │
│           ││                 ││                 ││                ││                 ││                 ││           │
│           ││                 ││                 ││                ││                 ││                 ││           │
│           ││                 ││                 ││                ││                 ││                 ││           │
│           ││                 ││                 ││                ││                 ││                 ││───────────┘
│           │└─────────────────┘└─────────────────┘└────────────────┘└─────────────────┘└─────────────────┘│───────────┐
│           │[←/→] select legion   (same legion selected)                                                  │           │
│           │                                                                                              │           │
│           │                                                                                              │           │
│           └──────────────────────────────────────────────────────────────────────────────────────────────┘           │
│                                                                ││  SOL   Solari      1 regions                       │
│                                                                ││                                                    │
└────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────────────┘
