crates/app-typewars/tests/snapshots/snapshot__profile_modal.snap
---
source: crates/app-typewars/tests/snapshot.rs
expression: s
---
typewars · leaderboard    you: rank #2    [q] back to map                                                               
                                                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ legion standings · by total damage ──────────────────────────────────────────────────────────────────────────────────┐
│1 COD The Codex     ████████████████████  10000  1 regions                                                            │
│2 ASH Ashborn       ███┌ alpha · profile  [Esc] close ────────────────────────────────────────┐                       │
│3 WAR Wardens       ███│alpha  ·  Ashborn · streak bonus                                      │                       │
│4 SRG Surge         ███│                                                                      │                       │
│5 SOL Solari        ██░│total damage:   12345                                                 │                       │
│                       │season damage:  5678                                                  │                       │
│                       │best WPM:       87                                                    │                       │
│                       │regions held:   0                                                     │                       │
└───────────────────────│                                                                      │───────────────────────┘
┌ player roster · top 3 │legion:  Ashborn (streak bonus)                                       │───────────────────────┐
│ 1  alpha              │                                                                      │                       │
│ 2  beta               │                                                                      │                       │
│ 3  gamma              │                                                                      │                       │
│                       │                                                                      │                       │
│                       │                                                                      │                       │
│                       │                                                                      │                       │
│                       │                                                                      │                       │
│                       │                                                                      │                       │
│                       │                                                                      │                       │
│                       │                                                                      │                       │
│                       │                                                                      │                       │
│                       └──────────────────────────────────────────────────────────────────────┘                       │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
