crates/app-typewars/tests/snapshots/snapshot__war_map.snap
---
source: crates/app-typewars/tests/snapshot.rs
expression: s
---
typewars · war map  |  liberated: 2/25  contested: 2  pristine: 1                                                       
                                                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ all regions (j/k or ↑/↓ · Enter to battle) · T1:5 T2:0 T3:0 ───┐┌ region detail ─────────────────────────────────────┐
│ 1     Arkanis Prime  T1  [~~~]  ███████░░░░░                   ││  01 · Arkanis Prime  T1                            │
│ 2   Zethara Station  T1  [COD]  ████████████                   ││                                                    │
│ 3     Ironveil Gate  T1  [~~~]  ████░░░░░░░░                   ││  enemy HP  3000 / 5000                             │
│ 4   The Hollow Ring  T1  [   ]  ████████████                   ││  ████████████████████████░░░░░░░░░░░░░░░░          │
│ 5     Solaris Reach  T1  [SOL]  ░░░░░░░░░░░░                   ││                                                    │
│                                                                ││  damage dealt:                                     │
│                                                                ││  ASH   ▓▓▓▓▓░░░░░░░░░░░░░░░ 1000                   │
│                                                                ││  COD   ▓▓▓▓▓▓▓▓▓▓░░░░░░░░░░ 2000                   │
│                                                                ││  WAR   ▓▓▓░░░░░░░░░░░░░░░░░ 500                    │
│                                                                ││  SRG   ▓▓░░░░░░░░░░░░░░░░░░ 300                    │
│                                                                ││  SOL   ▓░░░░░░░░░░░░░░░░░░░ 200                    │
│                                                                ││                                                    │
│                                                                ││  4 active · 4 wardens · regen 10/s                 │
│                                                                ││                                                    │
│                                                                ││  [ Enter ] ENTER BATTLE                            │
│                                                                ││                                                    │
│                                                                ││                                                    │
│                                                                │└────────────────────────────────────────────────────┘
│                                                                │┌ legion standings ──────────────────────────────────┐
│                                                                ││  ASH   Ashborn     0 regions                       │
│                                                                ││  COD   The Codex   1 regions                       │
│                                                                ││  WAR   Wardens     0 regions                       │
│                                                                ││  SRG   Surge       0 regions                       │
│                                                                ││  SOL   Solari      1 regions                       │
│                                                                ││                                                    │
└────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────────────┘
